--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>LBXBT - AI-Powered Token Intelligence</title>
 
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="assets/hero.webp" />
+
     <!-- Tailwind CSS (Dev Only) -->
     <script src="https://cdn.tailwindcss.com"></script>
 
